--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,17 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+# Firebase API key
+src/firebase.js
+
+### Firebase ###
+.idea
+**/node_modules/*
+**/.firebaserc
+
+### Firebase Patch ###
+.runtimeconfig.json
+.firebase/
+
+# End of https://www.toptal.com/developers/gitignore/api/firebase
