--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@firebase/app": "^0.6.5",
     "@firebase/firestore": "^1.15.1",
     "core-js": "^3.6.5",
+    "firebase": "^7.15.1",
     "vue": "^2.6.11",
     "vue-firestore": "^0.3.30",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuefire": "^2.2.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
